// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClickableStyle /> ClickableStyleAsAnATag story renders snapshot 1`] = `
<a
  class="button sizeMedium variantFlat colorBrand"
>
  ​
  ClickableStyle
</a>
`;

exports[`<ClickableStyle /> ClickableStyleLinkVariantWithIcon story renders snapshot 1`] = `
<a
  class="button variantLink colorBrand"
>
  ​
  ClickableStyle
  <div
    class="icon iconRight"
    style="margin: 0px -4px;"
  >
    <svg
      aria-hidden="true"
      class="svgIcon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
      />
    </svg>
  </div>
</a>
`;

exports[`<ClickableStyle /> ClickableStyleOutlineVariantWithIcon story renders snapshot 1`] = `
<a
  class="button sizeMedium variantOutline colorBrand"
>
  ​
  ClickableStyle
  <div
    class="icon iconRight"
    style="margin: 0px -4px;"
  >
    <svg
      aria-hidden="true"
      class="svgIcon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
      />
    </svg>
  </div>
</a>
`;

exports[`<ClickableStyle /> ClickableStyleWithIconOnLeftSide story renders snapshot 1`] = `
<a
  class="button sizeMedium variantFlat colorBrand"
>
  ​
  <div
    class="icon iconLeft"
    style="margin: 0px -4px;"
  >
    <svg
      aria-hidden="true"
      class="svgIcon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
      />
    </svg>
  </div>
  ClickableStyle
</a>
`;

exports[`<ClickableStyle /> ClickableStyleWithIconOnRightSide story renders snapshot 1`] = `
<a
  class="button sizeMedium variantFlat colorBrand"
>
  ​
  ClickableStyle
  <div
    class="icon iconRight"
    style="margin: 0px -4px;"
  >
    <svg
      aria-hidden="true"
      class="svgIcon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
      />
    </svg>
  </div>
</a>
`;

exports[`<ClickableStyle /> ClickableStyleWithOnlyIcon story renders snapshot 1`] = `
<a
  class="button sizeMedium variantFlat colorBrand"
>
  ​
  <div
    class="icon"
    style="margin: 0px -4px;"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        next
      </title>
      <path
        d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
      />
    </svg>
  </div>
</a>
`;
